plugins/kotlin/idea/tests/testData/checker/regression/AnnotationOnParameterOfFunctionType.fir.kt
fun <K, V> intercept(block: (<error descr="[WRONG_ANNOTATION_TARGET]">@A</error> K, (K) -> V) -> V) {

}

annotation class A
